syntax = "proto3";

package landlady;

//import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

service Zufang {

}

message TaskMetadata {
    // 原始 URL
    string originURL = 1;
    // 实际 URL
    string realURL = 2;
    // 去掉query的 URL
    string shortURL = 3;
    // 处理时间
    google.protobuf.Timestamp handleAt = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    // 模块名称
    string module = 5;
    // 执行批次
    string batch = 6;
}

message House {
    TaskMetadata metadata = 1;
    string name = 2;
    int64 price = 3;
    string payWay = 4;
    int64 roomSize = 5;
    google.protobuf.Timestamp releaseAt = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    Location location = 7;
    Apartment apartment = 8;
}

message Location {
    LocationCoordinates coordinates = 1;
    string province = 2; // 省
    string city = 3; // 市
    string county = 4; // 区
    string street = 5; // 街道
    string additional = 6; // 补充信息
}

// 地理位置
message LocationCoordinates {
    float lon = 1; // 经度
    float lat = 2; // 维度
}

// 公寓
message Apartment {
    string name = 1;
    Location location = 2;
}

message User {
    string name = 1;
    string phone = 2;
}
